--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-12-20 10:36+0100\n"
+"POT-Creation-Date: 2005-12-28 21:47+0100\n"
 "PO-Revision-Date: 2005-10-11 00:00+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
@@ -17,101 +17,101 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../libxfce4panel/xfce-panel-external-item.c:171
+#. dialogs are annoying, just spit out a warning
+#: ../libxfce4panel/xfce-panel-external-item.c:173
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
 msgstr "所有的項目意外地被移除了: \"%s\" 。"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:581
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:580
 #, c-format
 msgid "Remove \"%s\"?"
 msgstr "移除 \"%s\" 項目？"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:586 ../panel/panel-app.c:593
-#: ../panel/panel-app.c:625 ../panel/panel-app.c:658
-#: ../panel/panel-dialogs.c:574 ../panel/panel-dialogs.c:1559
-#: ../plugins/launcher/launcher.c:314 ../plugins/launcher/launcher.c:364
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:638
+#: ../panel/panel-app.c:670 ../panel/panel-app.c:703
+#: ../panel/panel-dialogs.c:565 ../panel/panel-dialogs.c:1513
+#: ../plugins/launcher/launcher.c:315 ../plugins/launcher/launcher.c:364
 msgid "Xfce Panel"
 msgstr "Xfce 面板"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:588
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:585
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr "這個項目將會從面板中移除，其設定將會遺失"
 
 #. configure, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:734
-#: ../plugins/launcher/launcher-dialog.c:1273
-#: ../plugins/separator/separator.c:241 ../plugins/actions/actions.c:295
-#: ../plugins/tasklist/tasklist.c:335 ../plugins/pager/pager.c:291
-#: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
-#: ../plugins/clock/clock.c:401
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:740
+#: ../plugins/actions/actions.c:295 ../plugins/separator/separator.c:241
+#: ../plugins/iconbox/iconbox.c:785 ../plugins/launcher/launcher-dialog.c:1273
+#: ../plugins/clock/clock.c:401 ../plugins/pager/pager.c:291
+#: ../plugins/systray/systray.c:353 ../plugins/tasklist/tasklist.c:351
 msgid "Properties"
 msgstr "特性"
 
 #. about item, hide by default
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:751
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:757
 msgid "About"
 msgstr "關於"
 
 #. move
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:764
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:770
 #, fuzzy
 msgid "Move"
 msgstr "移除"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:786
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:792
 msgid "Remove"
 msgstr "移除"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:803
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:809
 #, fuzzy
 msgid "Add New Item"
 msgstr "新增項目"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:815 ../panel/panel.c:574
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:633
 msgid "Customize Panel"
 msgstr ""
 
-#: ../panel/panel.c:585 ../panel/panel-dialogs.c:593
+#: ../panel/panel.c:644 ../panel/panel-dialogs.c:588
 msgid "Add Items"
 msgstr ""
 
-#: ../panel/panel.c:600 ../plugins/actions/actions.c:334
+#: ../panel/panel.c:659 ../plugins/actions/actions.c:334
 msgid "Quit"
 msgstr "離開"
 
-#: ../panel/panel.c:610
+#: ../panel/panel.c:669
 msgid "Restart"
 msgstr "重新啟動"
 
-#: ../panel/panel.c:624
+#: ../panel/panel.c:683
 msgid "About the Xfce Panel"
 msgstr "關於 Xfce 面板"
 
-#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
+#: ../panel/panel-item-manager.c:354 ../panel/panel-item-manager.c:362
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr "無法開啟 \"%s\" 模組"
 
-#: ../panel/panel-app.c:180 ../panel/panel-app.c:595
+#: ../panel/panel-app.c:207 ../panel/panel-app.c:640
 msgid "Exit Xfce Panel?"
 msgstr "離開 Xfce 面板？"
 
-#: ../panel/panel-app.c:596
+#: ../panel/panel-app.c:641
 msgid "You can't remove the last panel. Would you like to exit the program?"
 msgstr "您無法移除最後一個面板。您要離開本程式嗎？"
 
-#: ../panel/panel-app.c:623
+#: ../panel/panel-app.c:668
 #, c-format
 msgid "Remove Panel \"%d\"?"
 msgstr "移除面板 \"%d\" ？"
 
-#: ../panel/panel-app.c:627
+#: ../panel/panel-app.c:672
 msgid "The selected panel and all its items will be removed."
 msgstr ""
 
-#: ../panel/panel-app.c:666
+#: ../panel/panel-app.c:711
 msgid "Developer"
 msgstr "開發者"
 
@@ -148,15 +148,16 @@ msgstr ""
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
+#, fuzzy
 msgid ""
 " OPTIONS\n"
 " -h, --help      Show this message and exit\n"
 " -v, --version   Show this message and exit\n"
 " -c, --customize Show configuration dialog\n"
-" -s, --save      Save panel configurations\n"
+" -s, --save      Save configuration\n"
 " -r, --restart   Restart panels\n"
 " -q, --quit      End the session\n"
-" -x, --exit      Exit panels\n"
+" -x, --exit      Close all panels and end the program\n"
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
@@ -171,149 +172,167 @@ msgstr ""
 " -a, --add       新增項目\n"
 "\n"
 
-#: ../panel/panel-dialogs.c:608
+#: ../panel/panel-dialogs.c:603
 #, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr "從清單中將項目拖曳到面板或是將現有的項目移到新位置。"
 
-#: ../panel/panel-dialogs.c:621
+#: ../panel/panel-dialogs.c:616
 msgid "Avalaible Items"
 msgstr "可用的項目"
 
-#: ../panel/panel-dialogs.c:744 ../plugins/clock/clock.c:422
-msgid "Appearance"
-msgstr "外觀"
-
-#. size
-#: ../panel/panel-dialogs.c:756
-msgid "Size"
-msgstr "大小"
-
-#: ../panel/panel-dialogs.c:767
-msgid "Small"
-msgstr "小"
-
-#: ../panel/panel-dialogs.c:781
-msgid "Large"
-msgstr "大"
-
-#: ../panel/panel-dialogs.c:798
-msgid "Transparency"
-msgstr "透明度"
-
-#: ../panel/panel-dialogs.c:806
-msgid "None"
-msgstr "無"
-
-#: ../panel/panel-dialogs.c:820
-msgid "Full"
-msgstr "全"
-
-#: ../panel/panel-dialogs.c:1022 ../panel/panel-dialogs.c:1245
+#: ../panel/panel-dialogs.c:856 ../panel/panel-dialogs.c:1073
 msgid "Left"
 msgstr ""
 
-#: ../panel/panel-dialogs.c:1024 ../panel/panel-dialogs.c:1247
+#: ../panel/panel-dialogs.c:858 ../panel/panel-dialogs.c:1075
 msgid "Right"
 msgstr ""
 
-#: ../panel/panel-dialogs.c:1029 ../panel/panel-dialogs.c:1252
+#: ../panel/panel-dialogs.c:863 ../panel/panel-dialogs.c:1080
 msgid "Top"
 msgstr ""
 
-#: ../panel/panel-dialogs.c:1031 ../panel/panel-dialogs.c:1254
+#: ../panel/panel-dialogs.c:865 ../panel/panel-dialogs.c:1082
 msgid "Bottom"
 msgstr ""
 
 #. floating?
-#: ../panel/panel-dialogs.c:1065
+#: ../panel/panel-dialogs.c:893
 msgid "Panel Type"
 msgstr "面板類型"
 
-#: ../panel/panel-dialogs.c:1074
+#: ../panel/panel-dialogs.c:902
 msgid "Fixed Position"
 msgstr "固定位置"
 
-#: ../panel/panel-dialogs.c:1080
+#: ../panel/panel-dialogs.c:908
 msgid "Freely Moveable"
 msgstr "自由可移動"
 
 #. position
-#: ../panel/panel-dialogs.c:1091 ../panel/panel-dialogs.c:1269
+#: ../panel/panel-dialogs.c:919
 msgid "Position"
 msgstr "位置"
 
-#: ../panel/panel-dialogs.c:1179
+#: ../panel/panel-dialogs.c:1007
 msgid "_Full Width"
 msgstr "全寬度(_F)"
 
-#: ../panel/panel-dialogs.c:1188
+#: ../panel/panel-dialogs.c:1016
 msgid "Auto_hide"
 msgstr "自動隱藏(_H)"
 
-#: ../panel/panel-dialogs.c:1206
+#: ../panel/panel-dialogs.c:1034
 msgid "Orientation:"
 msgstr "方向"
 
-#: ../panel/panel-dialogs.c:1218
+#: ../panel/panel-dialogs.c:1046
 msgid "Horizontal"
 msgstr "水平"
 
-#: ../panel/panel-dialogs.c:1220
+#: ../panel/panel-dialogs.c:1048
 msgid "Vertical"
 msgstr "垂直"
 
-#: ../panel/panel-dialogs.c:1229
+#: ../panel/panel-dialogs.c:1057
 #, fuzzy
-msgid "Handle Position:"
+msgid "Handle:"
 msgstr "固定位置"
 
-#: ../panel/panel-dialogs.c:1241
+#: ../panel/panel-dialogs.c:1069
 msgid "At both sides"
 msgstr "在兩邊"
 
-#: ../panel/panel-dialogs.c:1290
-msgid "Monitor"
+#: ../panel/panel-dialogs.c:1142
+#, fuzzy
+msgid "Select Monitor"
 msgstr "監視器"
 
-#: ../panel/panel-dialogs.c:1406 ../panel/panel-dialogs.c:1442
-#: ../panel/panel-dialogs.c:1469
+#. size
+#: ../panel/panel-dialogs.c:1255
+msgid "Size"
+msgstr "大小"
+
+#: ../panel/panel-dialogs.c:1263
+msgid "Small"
+msgstr "小"
+
+#: ../panel/panel-dialogs.c:1276
+msgid "Large"
+msgstr "大"
+
+#: ../panel/panel-dialogs.c:1291
+msgid "Transparency"
+msgstr "透明度"
+
+#: ../panel/panel-dialogs.c:1299
+msgid "None"
+msgstr "無"
+
+#: ../panel/panel-dialogs.c:1313
+msgid "Full"
+msgstr "全"
+
+#: ../panel/panel-dialogs.c:1357 ../panel/panel-dialogs.c:1395
+#: ../panel/panel-dialogs.c:1420
 #, fuzzy, c-format
 msgid "Panel %d"
 msgstr "面板"
 
-#: ../panel/panel-dialogs.c:1490
+#: ../panel/panel-dialogs.c:1441
 #, fuzzy
 msgid "Remove Panel"
 msgstr "移除此面板"
 
-#: ../panel/panel-dialogs.c:1503
+#: ../panel/panel-dialogs.c:1454
 msgid "New Panel"
 msgstr "新增面板"
 
-#: ../panel/panel-dialogs.c:1604
-msgid "Customize Panels"
-msgstr ""
+#: ../panel/panel-dialogs.c:1538
+#, fuzzy
+msgid "Panel Manager"
+msgstr "面板類型"
 
-#: ../plugins/launcher/launcher.c:312 ../plugins/launcher/launcher.c:362
-#, c-format
-msgid "Could not run \"%s\""
-msgstr "無法執行\"%s\""
+#: ../plugins/actions/actions.c:309
+msgid "Panel Actions"
+msgstr "面板動作"
 
-#: ../plugins/launcher/launcher.c:560
-#: ../plugins/launcher/launcher-dialog.c:1121
-msgid "New Item"
-msgstr "新增項目"
+#: ../plugins/actions/actions.c:326
+msgid "Select action type:"
+msgstr "選擇動作類型："
 
-#: ../plugins/launcher/launcher.c:616 ../plugins/launcher/launcher.c:1131
-msgid "This item has not yet been configured"
-msgstr "該項目尚未設定"
+#: ../plugins/actions/actions.c:335
+msgid "Lock screen"
+msgstr "鎖住螢幕"
 
-#: ../plugins/launcher/launcher.c:1130
-msgid "New item"
-msgstr "增加新項目"
+#: ../plugins/actions/actions.c:336
+msgid "Quit + Lock screen"
+msgstr "離開並鎖住螢幕"
+
+#: ../plugins/separator/separator.c:255
+#: ../plugins/separator/separator.desktop.in.in.h:2
+msgid "Separator"
+msgstr "分隔線"
+
+#: ../plugins/separator/separator.c:268
+msgid "_Draw Separator"
+msgstr "畫分隔線(_D)"
+
+#: ../plugins/separator/separator.c:277
+msgid "_Expand"
+msgstr "延展(_E)"
+
+#: ../plugins/iconbox/iconbox.c:799
+#: ../plugins/iconbox/iconbox.desktop.in.in.h:1
+msgid "Icon Box"
+msgstr "圖示盒"
+
+#: ../plugins/iconbox/iconbox.c:813
+msgid "Only show minimized applications"
+msgstr "只顯示最小化的應用程式"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -400,6 +419,11 @@ msgstr "在終端機中執行(_T)"
 msgid "Use _startup notification"
 msgstr "使用啟動提示(_S)"
 
+#: ../plugins/launcher/launcher-dialog.c:1121
+#: ../plugins/launcher/launcher.c:560
+msgid "New Item"
+msgstr "新增項目"
+
 #: ../plugins/launcher/launcher-dialog.c:1233
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
@@ -410,64 +434,79 @@ msgstr "清單中的第一個項目會出現在面板上，其餘的項目會顯
 msgid "Program Launcher"
 msgstr "程式啟動器"
 
-#: ../plugins/launcher/launcher-dialog.c:1610
+#: ../plugins/launcher/launcher-dialog.c:1619
 msgid "Select file"
 msgstr "選擇檔案"
 
-#: ../plugins/separator/separator.c:255
-#: ../plugins/separator/separator.desktop.in.in.h:2
-msgid "Separator"
-msgstr "分隔線"
+#: ../plugins/launcher/launcher.c:313 ../plugins/launcher/launcher.c:362
+#, c-format
+msgid "Could not run \"%s\""
+msgstr "無法執行\"%s\""
 
-#: ../plugins/separator/separator.c:268
-msgid "_Draw Separator"
-msgstr "畫分隔線(_D)"
+#: ../plugins/launcher/launcher.c:616 ../plugins/launcher/launcher.c:1136
+msgid "This item has not yet been configured"
+msgstr "該項目尚未設定"
 
-#: ../plugins/separator/separator.c:277
-msgid "_Expand"
-msgstr "延展(_E)"
+#: ../plugins/launcher/launcher.c:1135
+msgid "New item"
+msgstr "增加新項目"
 
-#: ../plugins/actions/actions.c:309
-#: ../plugins/actions/actions.desktop.in.in.h:2
-msgid "Panel Actions"
-msgstr "面板動作"
+# NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
+# NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
+# NOTE 詳情請參見 http://bugzilla.xfce.org/show_bug.cgi?id=332
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: ../plugins/clock/clock.c:109
+msgid "%A %d %B %Y"
+msgstr "%Y年%B月%d日　%A"
 
-#: ../plugins/actions/actions.c:326
-msgid "Select action type:"
-msgstr "選擇動作類型："
+#  set names to use in option menus
+#: ../plugins/clock/clock.c:415 ../plugins/clock/clock.desktop.in.in.h:1
+msgid "Clock"
+msgstr "時鐘"
 
-#: ../plugins/actions/actions.c:335
-msgid "Lock screen"
-msgstr "鎖住螢幕"
+#: ../plugins/clock/clock.c:422
+msgid "Appearance"
+msgstr "外觀"
 
-#: ../plugins/actions/actions.c:336
-msgid "Quit + Lock screen"
-msgstr "離開並鎖住螢幕"
+#. Keep order in sync with XfceClockMode
+#: ../plugins/clock/clock.c:437
+msgid "Analog"
+msgstr "指針式"
 
-#: ../plugins/tasklist/tasklist.c:349
-#: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-msgid "Task List"
-msgstr "工作清單"
+#: ../plugins/clock/clock.c:438
+msgid "Digital"
+msgstr "數位式"
 
-#: ../plugins/tasklist/tasklist.c:362
-msgid "Show tasks from _all workspaces"
-msgstr "顯示所有工作區的工作(_A)"
+#: ../plugins/clock/clock.c:439
+msgid "LED"
+msgstr "數位液晶顯示"
 
-#: ../plugins/tasklist/tasklist.c:372
-msgid "Show application _names"
-msgstr "顯示應用程式的名稱(_N)"
+#: ../plugins/clock/clock.c:444 ../plugins/systray/systray.c:380
+msgid "Show _frame"
+msgstr "顯示架構(_F)"
 
-#: ../plugins/tasklist/tasklist.c:386
-msgid "Never group tasks"
-msgstr "永不將工作分門別類"
+#: ../plugins/clock/clock.c:452
+msgid "Clock Options"
+msgstr "時鐘選項"
 
-#: ../plugins/tasklist/tasklist.c:389
-msgid "Automatically group tasks"
-msgstr "自動將工作分門別類"
+#: ../plugins/clock/clock.c:462
+msgid "Use 24-_hour clock"
+msgstr "使用24小時制(_H)"
 
-#: ../plugins/tasklist/tasklist.c:392
-msgid "Always group tasks"
-msgstr "總是將工作分門別類"
+#: ../plugins/clock/clock.c:470
+msgid "Show AM/PM"
+msgstr "顯示 上午/下午"
+
+#: ../plugins/clock/clock.c:478
+msgid "Display seconds"
+msgstr "顯示秒"
 
 #: ../plugins/pager/pager.c:305 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -490,72 +529,51 @@ msgstr "此螢幕已經有另一個系統匣正在運行"
 msgid "Unable to register system tray: %s"
 msgstr "無法註冊系統匣： %s"
 
-#: ../plugins/systray/systray.c:359
+#: ../plugins/systray/systray.c:367
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "Status Area"
 msgstr "狀態區"
 
-#: ../plugins/systray/systray.c:372 ../plugins/clock/clock.c:444
-msgid "Show _frame"
-msgstr "顯示架構(_F)"
+#: ../plugins/tasklist/tasklist.c:365
+#: ../plugins/tasklist/tasklist.desktop.in.in.h:2
+msgid "Task List"
+msgstr "工作清單"
 
-#: ../plugins/iconbox/iconbox.c:762
-#: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-msgid "Icon Box"
-msgstr "圖示盒"
+#: ../plugins/tasklist/tasklist.c:378
+msgid "Show tasks from _all workspaces"
+msgstr "顯示所有工作區的工作(_A)"
 
-#: ../plugins/iconbox/iconbox.c:776
-msgid "Only show minimized applications"
-msgstr "只顯示最小化的應用程式"
+#: ../plugins/tasklist/tasklist.c:388
+msgid "Show application _names"
+msgstr "顯示應用程式的名稱(_N)"
 
-# NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
-# NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
-# NOTE 詳情請參見 http://bugzilla.xfce.org/show_bug.cgi?id=332
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: ../plugins/clock/clock.c:109
-msgid "%A %d %B %Y"
-msgstr "%Y年%B月%d日　%A"
+#: ../plugins/tasklist/tasklist.c:402
+msgid "Never group tasks"
+msgstr "永不將工作分門別類"
 
-#  set names to use in option menus
-#: ../plugins/clock/clock.c:415 ../plugins/clock/clock.desktop.in.in.h:1
-msgid "Clock"
-msgstr "時鐘"
+#: ../plugins/tasklist/tasklist.c:405
+msgid "Automatically group tasks"
+msgstr "自動將工作分門別類"
 
-#. Keep order in sync with XfceClockMode
-#: ../plugins/clock/clock.c:437
-msgid "Analog"
-msgstr "指針式"
+#: ../plugins/tasklist/tasklist.c:408
+msgid "Always group tasks"
+msgstr "總是將工作分門別類"
 
-#: ../plugins/clock/clock.c:438
-msgid "Digital"
-msgstr "數位式"
+#: ../plugins/actions/actions.desktop.in.in.h:1
+msgid "Action Buttons"
+msgstr ""
 
-#: ../plugins/clock/clock.c:439
-msgid "LED"
-msgstr "數位液晶顯示"
+#: ../plugins/actions/actions.desktop.in.in.h:2
+msgid "Log out or lock the screen"
+msgstr "登出或鎖住螢幕"
 
-#: ../plugins/clock/clock.c:452
-msgid "Clock Options"
-msgstr "時鐘選項"
+#: ../plugins/separator/separator.desktop.in.in.h:1
+msgid "Adds a space or a line between panel items"
+msgstr "在面板項目間加入空白或直線"
 
-#: ../plugins/clock/clock.c:462
-msgid "Use 24-_hour clock"
-msgstr "使用24小時制(_H)"
-
-#: ../plugins/clock/clock.c:470
-msgid "Show AM/PM"
-msgstr "顯示 上午/下午"
-
-#: ../plugins/clock/clock.c:478
-msgid "Display seconds"
-msgstr "顯示秒"
+#: ../plugins/iconbox/iconbox.desktop.in.in.h:2
+msgid "Show icons of all running applications"
+msgstr "顯示所有執行中的應用程式圖示"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -565,25 +583,9 @@ msgstr "啟動器"
 msgid "Program launcher with optional menu"
 msgstr "程式啟動器，可附加選單"
 
-#: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-msgid "Test Plugin"
-msgstr "測試外掛程式"
-
-#: ../plugins/testplugin/testplugin.desktop.in.in.h:2
-msgid "This plugin has no purpose"
-msgstr "此外掛程式無作用"
-
-#: ../plugins/separator/separator.desktop.in.in.h:1
-msgid "Adds a space or a line between panel items"
-msgstr "在面板項目間加入空白或直線"
-
-#: ../plugins/actions/actions.desktop.in.in.h:1
-msgid "Log out or lock the screen"
-msgstr "登出或鎖住螢幕"
-
-#: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-msgid "Show all running applications"
-msgstr "顯示所有執行中的應用程式"
+#: ../plugins/clock/clock.desktop.in.in.h:2
+msgid "What time is it?"
+msgstr "現在幾點？"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
@@ -593,13 +595,17 @@ msgstr "所有虛擬桌面的最小化檢視"
 msgid "Show notification icons"
 msgstr "顯示通知圖示"
 
-#: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-msgid "Show icons of all running applications"
-msgstr "顯示所有執行中的應用程式圖示"
+#: ../plugins/tasklist/tasklist.desktop.in.in.h:1
+msgid "Show all running applications"
+msgstr "顯示所有執行中的應用程式"
 
-#: ../plugins/clock/clock.desktop.in.in.h:2
-msgid "What time is it?"
-msgstr "現在幾點？"
+#: ../plugins/testplugin/testplugin.desktop.in.in.h:1
+msgid "Test Plugin"
+msgstr "測試外掛程式"
+
+#: ../plugins/testplugin/testplugin.desktop.in.in.h:2
+msgid "This plugin has no purpose"
+msgstr "此外掛程式無作用"
 
 #, fuzzy
 #~ msgid "Select Panel"
