--- a/po/he.po
+++ b/po/he.po
@@ -1,33 +1,34 @@
+# translation of he.po to Hebrew
 # Hebrew translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Dotan Kamber <kamberd@yahoo.com>, 2004.
+#
+# Dotan Kamber <kamberd@yahoo.com>, 2004, 2006.
 # Jonatan Perry <Jonatan443@walla.co.il>, 2004.
 # Yuval Tanny <tanai@int.gov.il>, 2004.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.28\n"
+"Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-01-29 18:45+0100\n"
-"PO-Revision-Date: 2005-09-29 20:29+0900\n"
-"Last-Translator: Yuval Tanny <tanai@int.gov.il>\n"
-"Language-Team: Hebrew Team <xfce2004@yahoo.com>\n"
+"PO-Revision-Date: 2006-01-30 02:20+0200\n"
+"Last-Translator: Dotan Kamber <kamberd@yahoo.com>\n"
+"Language-Team: Hebrew\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.11\n"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:177
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "פריט הוסר באופן לא צפוי: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:572
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "_הסר"
+msgstr "להסיר את \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
@@ -37,9 +38,8 @@ msgid "Xfce Panel"
 msgstr "לוח Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgid "The item will be removed from the panel and its configuration will be lost."
+msgstr "הפריט יוסר מהלוח ומאפייניו יאבדו."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:732
@@ -49,80 +49,74 @@ msgstr ""
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
 #: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
-msgstr ""
+msgstr "מאפיינים"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
-msgstr ""
+msgstr "אודות"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:762
-#, fuzzy
 msgid "Move"
-msgstr "_הסר"
+msgstr "הזז"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:784
-#, fuzzy
 msgid "Remove"
-msgstr "_הסר"
+msgstr "הסר"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:801
-#, fuzzy
 msgid "Add New Item"
 msgstr "הוסף פריט חדש"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
-msgstr ""
+msgstr "התאם את הלוח"
 
 #: ../panel/panel.c:639 ../panel/panel-dialogs.c:616
 msgid "Add Items"
-msgstr ""
+msgstr "הוסף פריטים"
 
 #: ../panel/panel.c:654 ../plugins/actions/actions.c:350
 msgid "Quit"
-msgstr ""
+msgstr "יציאה"
 
 #: ../panel/panel.c:664
-#, fuzzy
 msgid "Restart"
-msgstr "_איתחול"
+msgstr "אתחל"
 
 #: ../panel/panel.c:678
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "לוח Xfce"
+msgstr "אודות לוח Xfce"
 
 #: ../panel/panel-item-manager.c:357 ../panel/panel-item-manager.c:365
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "אין אפשרות ליצור פריט ללוח \"%s\"."
+msgstr "כשל בפתיחת מודול \"%s\"."
 
 #: ../panel/panel-app.c:211 ../panel/panel-app.c:644
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "לוח Xfce"
+msgstr "לצאת מלוח Xfce?"
 
 #: ../panel/panel-app.c:645
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "אין אפשרות להסיר את הלוח האחרון, האם ברצונך לצאת מהתוכנית?"
 
 #: ../panel/panel-app.c:672
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "להסיר את לוח \"%d\"?"
 
 #: ../panel/panel-app.c:676
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "הלוח הנבחר וכל הפריטים בו יוסרו."
 
 #: ../panel/panel-app.c:715
 msgid "Developer"
-msgstr ""
+msgstr "מפתח"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -134,12 +128,12 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" לוח Xfce %s גרסה\n"
+" לוח Xfce %s\n"
 "\n"
-" חלק מסביבת העבודה של Xfce\n"
+" חלק מסביבת שולחן העבודה של Xfce\n"
 " http://www.xfce.org\n"
 "\n"
-" מופץ תחת רישיון ה GNU GPL.\n"
+" מופץ ברישיון ה- GNU GPL.\n"
 "\n"
 
 #: ../panel/main.c:52
@@ -148,6 +142,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Usage: %s [OPTIONS]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -168,55 +164,53 @@ msgstr ""
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
-msgstr ""
+msgstr "גרור פריטים מהרשימה אל הלוח או הסר אותם על ידי גרירתם חזרה אל הרשימה."
 
 #: ../panel/panel-dialogs.c:644
 msgid "Avalaible Items"
-msgstr ""
+msgstr "פריטים זמינים"
 
 #: ../panel/panel-dialogs.c:852 ../panel/panel-dialogs.c:1075
 msgid "Normal Width"
-msgstr ""
+msgstr "רוחב רגיל"
 
 #: ../panel/panel-dialogs.c:854 ../panel/panel-dialogs.c:1077
 msgid "Full Width"
-msgstr ""
+msgstr "רוחב מלא"
 
 #: ../panel/panel-dialogs.c:860 ../panel/panel-dialogs.c:1083
 #, fuzzy
 msgid "Span Monitors"
-msgstr "עורך"
+msgstr "פזר צגים"
 
 #: ../panel/panel-dialogs.c:920 ../panel/panel-dialogs.c:1148
 msgid "Left"
-msgstr ""
+msgstr "שמאל"
 
 #: ../panel/panel-dialogs.c:922 ../panel/panel-dialogs.c:1150
 msgid "Right"
-msgstr ""
+msgstr "ימין"
 
 #: ../panel/panel-dialogs.c:927 ../panel/panel-dialogs.c:1155
 msgid "Top"
-msgstr ""
+msgstr "עליון"
 
 #: ../panel/panel-dialogs.c:929 ../panel/panel-dialogs.c:1157
 msgid "Bottom"
-msgstr ""
+msgstr "תחתון"
 
 #. floating?
 #: ../panel/panel-dialogs.c:957
-#, fuzzy
 msgid "Panel Type"
-msgstr "גודל הלוח:"
+msgstr "סוג הלוח"
 
 #: ../panel/panel-dialogs.c:966
-#, fuzzy
 msgid "Fixed Position"
-msgstr "מיקום"
+msgstr "מיקום קבוע"
 
 #: ../panel/panel-dialogs.c:972
 msgid "Freely Moveable"
-msgstr ""
+msgstr "חופשי לנוע"
 
 #. position
 #: ../panel/panel-dialogs.c:983
@@ -224,14 +218,12 @@ msgid "Position"
 msgstr "מיקום"
 
 #: ../panel/panel-dialogs.c:1091
-#, fuzzy
 msgid "Auto_hide"
-msgstr "הסתרה אוטומטית"
+msgstr "_הסתרה אוטומטית"
 
 #: ../panel/panel-dialogs.c:1109
-#, fuzzy
 msgid "Orientation:"
-msgstr "כיוון הלוח:"
+msgstr "כיוון:"
 
 #: ../panel/panel-dialogs.c:1121
 msgid "Horizontal"
@@ -242,19 +234,16 @@ msgid "Vertical"
 msgstr "אנכי"
 
 #: ../panel/panel-dialogs.c:1132
-#, fuzzy
 msgid "Handle:"
-msgstr "מיקום"
+msgstr "ידית:"
 
 #: ../panel/panel-dialogs.c:1144
-#, fuzzy
 msgid "At both sides"
-msgstr "הסתרה אוטומטית"
+msgstr "בשני הצדדים"
 
 #: ../panel/panel-dialogs.c:1217
-#, fuzzy
 msgid "Select Monitor"
-msgstr "עורך"
+msgstr "בחירת צג"
 
 #. size
 #: ../panel/panel-dialogs.c:1330 ../plugins/tasklist/tasklist.c:431
@@ -271,56 +260,49 @@ msgstr "גדול"
 
 #: ../panel/panel-dialogs.c:1366
 msgid "Transparency"
-msgstr ""
+msgstr "שקיפות"
 
 #: ../panel/panel-dialogs.c:1374
 msgid "None"
-msgstr ""
+msgstr "ללא"
 
 #: ../panel/panel-dialogs.c:1388
 msgid "Full"
-msgstr ""
+msgstr "מלאה"
 
 #: ../panel/panel-dialogs.c:1432 ../panel/panel-dialogs.c:1470
 #: ../panel/panel-dialogs.c:1495
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "לוח Xfce"
+msgstr "לוח %d"
 
 #: ../panel/panel-dialogs.c:1516
-#, fuzzy
 msgid "Remove Panel"
-msgstr "_הסר"
+msgstr "הסר לוח"
 
 #: ../panel/panel-dialogs.c:1529
-#, fuzzy
 msgid "New Panel"
-msgstr "לוח Xfce"
+msgstr "לוח חדש"
 
 #: ../panel/panel-dialogs.c:1613
-#, fuzzy
 msgid "Panel Manager"
-msgstr "גודל הלוח:"
+msgstr "מנהל הלוח"
 
 #: ../plugins/actions/actions.c:325
-#, fuzzy
 msgid "Panel Actions"
-msgstr "הגדרות לוח"
+msgstr "פעולות הלוח"
 
 #: ../plugins/actions/actions.c:342
-#, fuzzy
 msgid "Select action type:"
-msgstr "בחר פקודה"
+msgstr "בחירת סוג פעולה:"
 
 #: ../plugins/actions/actions.c:351
-#, fuzzy
 msgid "Lock screen"
-msgstr "_נעילת מסך"
+msgstr "נעילת מסך"
 
 #: ../plugins/actions/actions.c:352
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "_נעילת מסך"
+msgstr "יציאה + נעילת מסך"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -331,14 +313,12 @@ msgstr "_נעילת מסך"
 #. * %Y  : four digit year
 #.
 #: ../plugins/clock/clock.c:109
-#, fuzzy
 msgid "%A %d %B %Y"
 msgstr "%A, %d %B %Y"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "נעילה"
+msgstr "שעון"
 
 #: ../plugins/clock/clock.c:431
 msgid "Appearance"
@@ -359,56 +339,50 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
 msgid "Show _frame"
-msgstr ""
+msgstr "הצג _מסגרת"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
-msgstr ""
+msgstr "אפשרויות שעון"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "השתמש בשעון 24 _שעות"
 
 #: ../plugins/clock/clock.c:479
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "הצג AM/PM"
 
 #: ../plugins/clock/clock.c:487
 msgid "Display seconds"
-msgstr ""
+msgstr "הצג שניות"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "הגדרות סמלים"
+msgstr "תיבת סמלים"
 
 #: ../plugins/iconbox/iconbox.c:822
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "הצג _שמות של יישומים"
+msgstr "הצגת יישומים ממוזערים בלבד"
 
 #: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "אין אפשרות ליצור פריט ללוח \"%s\"."
+msgstr "כשל בהרצת \"%s\"."
 
 #: ../plugins/launcher/launcher.c:578
 #: ../plugins/launcher/launcher-dialog.c:1121
-#, fuzzy
 msgid "New Item"
-msgstr "הוסף פריט חדש"
+msgstr "פריט חדש"
 
 #: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "לפריט זה אין אפשרויות הגדרה"
+msgstr "פריט זה עדיין לא אופיין"
 
 #: ../plugins/launcher/launcher.c:1157
-#, fuzzy
 msgid "New item"
-msgstr "הוסף פריט חדש"
+msgstr "פריט חדש"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -463,52 +437,46 @@ msgid "Terminal"
 msgstr "מסוף"
 
 #: ../plugins/launcher/launcher-dialog.c:381
-#, fuzzy
 msgid "Select image file"
-msgstr "בחר קובץ:"
+msgstr "בחר קובץ תמונה"
 
 #: ../plugins/launcher/launcher-dialog.c:426
 msgid "Select command"
 msgstr "בחר פקודה"
 
 #: ../plugins/launcher/launcher-dialog.c:449
-#, fuzzy
 msgid "Name"
-msgstr "משחקים"
+msgstr "שם"
 
 #: ../plugins/launcher/launcher-dialog.c:467
-#, fuzzy
 msgid "Description"
-msgstr "מיקום"
+msgstr "תיאור"
 
 #: ../plugins/launcher/launcher-dialog.c:522
 msgid "Other..."
-msgstr ""
+msgstr "אחר..."
 
 #: ../plugins/launcher/launcher-dialog.c:608
-#, fuzzy
 msgid "Command"
-msgstr "פקודה:"
+msgstr "פקודה"
 
 #: ../plugins/launcher/launcher-dialog.c:644
 msgid "Run in _terminal"
 msgstr "הרץ בתוך _מסוף"
 
 #: ../plugins/launcher/launcher-dialog.c:662
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "השתמש בהתראת _פתיחה"
+msgstr "השתמש בהתרעת _פתיחה"
 
 #: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
-msgstr ""
+msgstr "הפריט הראשון ברשימה מוצג בלוח. פריטים נוספים יוצגו בתפריט."
 
 #: ../plugins/launcher/launcher-dialog.c:1298
-#, fuzzy
 msgid "Program Launcher"
-msgstr "הוסף תפריט למשגר"
+msgstr "משגר יישום"
 
 #: ../plugins/launcher/launcher-dialog.c:1633
 msgid "Select file"
@@ -532,21 +500,20 @@ msgid "Separator"
 msgstr "מפריד"
 
 #: ../plugins/separator/separator.c:284
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "מפריד"
+msgstr "הצג _מפריד"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
-msgstr ""
+msgstr "_הרחב"
 
 #: ../plugins/showdesktop/showdesktop.c:63
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "שחזר חלונות נסתרים"
 
 #: ../plugins/showdesktop/showdesktop.c:64
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "הסתר חלונות והצג את שולחן העבודה"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -559,22 +526,22 @@ msgstr "אין אפשרות לרשום את מגש המערכת: %s"
 
 #: ../plugins/systray/systray.c:376
 #: ../plugins/systray/systray.desktop.in.in.h:2
+#, fuzzy
 msgid "Status Area"
-msgstr ""
+msgstr "אזור מצב"
 
 #: ../plugins/tasklist/tasklist.c:414 ../plugins/tasklist/tasklist.c:467
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "משימות"
+msgstr "רשימת משימות"
 
 #: ../plugins/tasklist/tasklist.c:439
 msgid "Minimum Width:"
-msgstr ""
+msgstr "רוחב מינימלי:"
 
 #: ../plugins/tasklist/tasklist.c:454
 msgid "Use all available space"
-msgstr ""
+msgstr "השתמש במלוא השטח"
 
 #: ../plugins/tasklist/tasklist.c:471
 msgid "Show tasks from _all workspaces"
@@ -585,55 +552,50 @@ msgid "Show application _names"
 msgstr "הצג _שמות של יישומים"
 
 #: ../plugins/tasklist/tasklist.c:495
-#, fuzzy
 msgid "Never group tasks"
-msgstr "תמיד _קבץ משימות"
+msgstr "לעולם אל תקבץ משימות"
 
 #: ../plugins/tasklist/tasklist.c:498
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "תמיד _קבץ משימות"
+msgstr "קבץ משימות באופן אוטומטי"
 
 #: ../plugins/tasklist/tasklist.c:501
-#, fuzzy
 msgid "Always group tasks"
-msgstr "תמיד _קבץ משימות"
+msgstr "תמיד קבץ משימות"
 
 #: ../plugins/windowlist/windowlist.c:249
 #: ../plugins/windowlist/windowlist.c:480
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "רשימת חלונות"
 
 #: ../plugins/windowlist/windowlist.c:348
 msgid "Add workspace"
-msgstr ""
+msgstr "הוסף משטח עבודה"
 
 #: ../plugins/windowlist/windowlist.c:358
 msgid "Delete workspace"
-msgstr ""
+msgstr "מחק משטח עבודה"
 
 #: ../plugins/windowlist/windowlist.c:493
 msgid "Include all Workspaces"
-msgstr ""
+msgstr "כלול את כל משטחי העבודה"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "כפתורי פעולות"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "נעילת מסך"
+msgstr "יציאה או נעילת מסך"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "מה השעה?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "הצג _שמות של יישומים"
+msgstr "הצג סמלים של כל היישומים המופעלים"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -641,43 +603,42 @@ msgstr "משגר"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "משגר ייישום עם אפשרות לתפריט"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "תצוגה מוקטנת של כל השולחנות המדומים"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "מוסיף רווח או קו בין פריטי לוח"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "הצג את שולחן העבודה"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr ""
+msgstr "החלף מצב הצגת/הסתרת שולחן עבודה"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "הצג _שמות של יישומים"
+msgstr "הצג סמלי הודעות"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "הצג _שמות של יישומים"
+msgstr "הצג את כל היישומים הפועלים"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "הצג רשימת חלונות זמינים"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 #, fuzzy
 msgid "Test Plugin"
-msgstr "משגר"
+msgstr "הרחבת בוחן"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "להרחבה זו אין כל שימוש"
+
